[gd_scene load_steps=5 format=2]

[ext_resource path="res://LoseScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainMenuButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/YouLoseCard.png" type="Texture" id=3]
[ext_resource path="res://Assets/Respawn Button.png" type="Texture" id=4]

[node name="LoseScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 640.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 415.0
margin_right = 865.0
margin_bottom = 150.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 1280.0
margin_bottom = 316.0

[node name="Respawn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 521.0
margin_right = 759.0
margin_bottom = 78.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )

[node name="MainMenu" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 560.0
margin_top = 82.0
margin_right = 720.0
margin_bottom = 162.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Respawn" to="." method="_on_Respawn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
